[metadata]
name = uclales_zarr
version = 0.0.1
author = Leif Denby
author_email = leif@denby.eu
description = zarr-descriptor writer for UCLALES model output
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/leifdenby/uclales_zarr

[options]
packages=find:
install_requires =
    xarray
    netcdf4
    dask
    ujson
    fsspec>=0.0.7
    tqdm
    loguru


[options.packages.find]
where=.

[options.extras_require]
test =
  pytest
dev =
  %(test)s
  ipython
# all linting done by precommit

[flake8]
ignore =
    E203 # whitespace before ':' - doesn't work well with black
    E402 # module level import not at top of file
    E501 # line too long - let black worry about that
    E731 # do not assign a lambda expression, use a def
    W503 # line break before binary operator
    E741 # ambigious name
    C901 # function is too complex
exclude=
    .eggs
    doc
per-file-ignores = __init__.py:F401
# settings for using flake8 with black:
max-line-length = 88
extend-ignore = E203


[pylint.TYPECHECK]
# List of members which are set dynamically and missed by Pylint inference
# system, and so shouldn't trigger E1101 when accessed.
generated-members=numpy.*
good-names=i,j,df,n_*


[isort]
profile = black
skip_gitignore = true
force_to_top = true
default_section = THIRDPARTY
known_first_party = uclales_zarr
